--- a/project/index.html
+++ b/project/index.html
@@ -386,6 +386,221 @@
                 </div>
             </div>
         </section>
+
+        <section class="our-client">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                        <h2>Our Client</h2>
+                        <div class="client-text">
+                            Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="client-carousel">
+                    <div id="demo" class="carousel slide" data-ride="carousel">
+
+                        <!-- The slideshow -->
+                        <div class="carousel-inner">
+                            <div class="carousel-item">
+                                <div class="row">
+                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                        <img src="image/logo1.png" alt="logo">
+                                    </div>
+
+                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                        <img src="image/logo2.png" alt="logo">
+                                    </div>
+
+                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                        <img src="image/logo3.png" alt="logo">
+                                    </div>
+
+                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                        <img src="image/logo4.png" alt="logo">
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="carousel-item active">
+                                <div class="row">
+                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                        <img src="image/logo1.png" alt="logo">
+                                    </div>
+
+                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                        <img src="image/logo2.png" alt="logo">
+                                    </div>
+
+                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                        <img src="image/logo3.png" alt="logo">
+                                    </div>
+
+                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                        <img src="image/logo4.png" alt="logo">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="row">
+                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                        <img src="image/logo1.png" alt="logo">
+                                    </div>
+
+                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                        <img src="image/logo2.png" alt="logo">
+                                    </div>
+
+                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                        <img src="image/logo3.png" alt="logo">
+                                    </div>
+
+                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                        <img src="image/logo4.png" alt="logo">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <ul class="carousel-indicators">
+                            <li data-target="#demo" data-slide-to="0"></li>
+                            <li data-target="#demo" data-slide-to="1" class="active"></li>
+                            <li data-target="#demo" data-slide-to="2"></li>
+                        </ul>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="our-team">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                        <h2>Our Team</h2>
+                        <div class="our-team-text">
+                            The first requirement for an user experience is to meet the exact needs of the customer.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xl-4 col-lg-14 col-md-12 col-sm-12">
+                        <div class="team-man">
+                            <div class="team-man-photo">
+                                <img src="image/scot.jpg" alt="Reena Scot">
+                            </div>
+                            <div class="team-man-box">
+                                <div class="team-man-name">Reena Scot</div>
+                                <div class="team-man-description">
+                                    Phasellus vehicula justo eget diam posuere sollicitudin eu tincidunt nulla.
+                                </div>
+                                <div class="team-man-icon">
+                                    <div class="team-icon-box">
+                                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                    </div>
+                                    <div class="team-icon-box">
+                                        <a href="#"><i class="fab fa-twitter"></i></a>
+                                    </div>
+                                    <div class="team-icon-box">
+                                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-4 col-lg-14 col-md-12 col-sm-12">
+                        <div class="team-man">
+                            <div class="team-man-photo">
+                                <img src="image/martin.jpg" alt="David Martin">
+                            </div>
+                            <div class="team-man-box">
+                                <div class="team-man-name">David Martin</div>
+                                <div class="team-man-description">
+                                    Phasellus vehicula justo eget diam posuere sollicitudin eu tincidunt nulla.
+                                </div>
+                                <div class="team-man-icon">
+                                    <div class="team-icon-box">
+                                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                    </div>
+                                    <div class="team-icon-box">
+                                        <a href="#"><i class="fab fa-twitter"></i></a>
+                                    </div>
+                                    <div class="team-icon-box">
+                                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-4 col-lg-14 col-md-12 col-sm-12">
+                        <div class="team-man">
+                            <div class="team-man-photo">
+                                <img src="image/white.jpg" alt="John White">
+                            </div>
+                            <div class="team-man-box">
+                                <div class="team-man-name">John White</div>
+                                <div class="team-man-description">
+                                    Phasellus vehicula justo eget diam posuere sollicitudin eu tincidunt nulla.
+                                </div>
+                                <div class="team-man-icon">
+                                    <div class="team-icon-box">
+                                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                    </div>
+                                    <div class="team-icon-box">
+                                        <a href="#"><i class="fab fa-twitter"></i></a>
+                                    </div>
+                                    <div class="team-icon-box">
+                                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="grey-box">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                        <h2>Join Us & Free Subscribe</h2>
+                        <div class="grey-box-text">
+                            The first requirement for an user experience is to meet the exact needs of the customer.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                        <form class="form-email">
+                            <input class="grey-box-email" type="email" name="email" placeholder="Your Mail">
+                            <input class="grey-box-btn" type="submit" value="Send">
+                        </form>
+                    </div>
+                </div>
+                </div>
+        </section>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-logo">
+                    <img src="image/logo.png" alt="logo">
+                </div>
+                <div class="footer-text">
+                    © 2017 - <a href="#">ThemeXpert</a> All Right Reserved
+                </div>
+                <div class="footer-icons">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+        </footer>
     </div>
 </main>
 </body>
