--- a/project/index.html
+++ b/project/index.html
@@ -183,7 +183,7 @@
         <section class="black-block" id="black-block">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6">
                         <div class="black-box">
                             <div class="icon-black-block"><img src="image/bag.png" alt="bag"></div>
                             <div class="num-black-box">345</div>
@@ -191,7 +191,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6">
                         <div class="black-box">
                             <div class="icon-black-block"><img src="image/coffee.png" alt="coffee"></div>
                             <div class="num-black-box">983</div>
@@ -199,7 +199,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6">
                         <div class="black-box">
                             <div class="icon-black-block"><img src="image/pensil.png" alt="pensil"></div>
                             <div class="num-black-box">478</div>
@@ -207,7 +207,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6">
                         <div class="black-box">
                             <div class="icon-black-block"><img src="image/heart.png" alt="heart"></div>
                             <div class="num-black-box">48</div>
@@ -324,7 +324,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
                         <div class="red-box service-box">
                             <div class="service-title-box">Interactive Elements</div>
                             <div class="service-text-box">
@@ -334,7 +334,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
                         <div class="green-box service-box">
                             <div class="service-title-box">Custom Menus</div>
                             <div class="service-text-box">
@@ -344,7 +344,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
                         <div class="violet-box service-box">
                             <div class="service-title-box">Animated Counters</div>
                             <div class="service-text-box">
@@ -354,7 +354,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
                         <div class="blue-box service-box">
                             <div class="service-title-box">Easy To Customize</div>
                             <div class="service-text-box">
@@ -364,7 +364,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
                         <div class="yellow-box service-box">
                             <div class="service-title-box">Online Store</div>
                             <div class="service-text-box">
@@ -374,7 +374,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
                         <div class="lighgtblue-box service-box">
                             <div class="service-title-box">Custom Pages</div>
                             <div class="service-text-box">
@@ -405,19 +405,19 @@
                         <div class="carousel-inner">
                             <div class="carousel-item">
                                 <div class="row">
-                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
                                         <img src="image/logo1.png" alt="logo">
                                     </div>
 
-                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
                                         <img src="image/logo2.png" alt="logo">
                                     </div>
 
-                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
                                         <img src="image/logo3.png" alt="logo">
                                     </div>
 
-                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
                                         <img src="image/logo4.png" alt="logo">
                                     </div>
                                 </div>
@@ -425,38 +425,38 @@
                             </div>
                             <div class="carousel-item active">
                                 <div class="row">
-                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
                                         <img src="image/logo1.png" alt="logo">
                                     </div>
 
-                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
                                         <img src="image/logo2.png" alt="logo">
                                     </div>
 
-                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
                                         <img src="image/logo3.png" alt="logo">
                                     </div>
 
-                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
                                         <img src="image/logo4.png" alt="logo">
                                     </div>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <div class="row">
-                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
                                         <img src="image/logo1.png" alt="logo">
                                     </div>
 
-                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
                                         <img src="image/logo2.png" alt="logo">
                                     </div>
 
-                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
                                         <img src="image/logo3.png" alt="logo">
                                     </div>
 
-                                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
                                         <img src="image/logo4.png" alt="logo">
                                     </div>
                                 </div>
@@ -486,7 +486,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-xl-4 col-lg-14 col-md-12 col-sm-12">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                         <div class="team-man">
                             <div class="team-man-photo">
                                 <img src="image/scot.jpg" alt="Reena Scot">
@@ -511,7 +511,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-4 col-lg-14 col-md-12 col-sm-12">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                         <div class="team-man">
                             <div class="team-man-photo">
                                 <img src="image/martin.jpg" alt="David Martin">
@@ -536,7 +536,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-4 col-lg-14 col-md-12 col-sm-12">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                         <div class="team-man">
                             <div class="team-man-photo">
                                 <img src="image/white.jpg" alt="John White">
@@ -578,7 +578,7 @@
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                         <form class="form-email">
-                            <input class="grey-box-email" type="email" name="email" placeholder="Your Mail">
+                            <input class="grey-box-email" type="email" name="email" placeholder="Your Mail" required>
                             <input class="grey-box-btn" type="submit" value="Send">
                         </form>
                     </div>
