--- a/project/index.html
+++ b/project/index.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="col-xl-8 col-lg-8 col-md-11 col-sm-12">
                         <nav class="nav-menu">
-                            <nav class="navbar-expand-sm">
+                            <nav class="navbar-expand-md">
                                 <div class="responsive-menu">
                                     <a class="navbar-brand" href="#">Menu</a>
 
@@ -405,19 +405,19 @@
                         <div class="carousel-inner">
                             <div class="carousel-item">
                                 <div class="row">
-                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
                                         <img src="image/logo1.png" alt="logo">
                                     </div>
 
-                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
                                         <img src="image/logo2.png" alt="logo">
                                     </div>
 
-                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
                                         <img src="image/logo3.png" alt="logo">
                                     </div>
 
-                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
                                         <img src="image/logo4.png" alt="logo">
                                     </div>
                                 </div>
@@ -425,38 +425,38 @@
                             </div>
                             <div class="carousel-item active">
                                 <div class="row">
-                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
                                         <img src="image/logo1.png" alt="logo">
                                     </div>
 
-                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
                                         <img src="image/logo2.png" alt="logo">
                                     </div>
 
-                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
                                         <img src="image/logo3.png" alt="logo">
                                     </div>
 
-                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
                                         <img src="image/logo4.png" alt="logo">
                                     </div>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <div class="row">
-                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
                                         <img src="image/logo1.png" alt="logo">
                                     </div>
 
-                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
                                         <img src="image/logo2.png" alt="logo">
                                     </div>
 
-                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
                                         <img src="image/logo3.png" alt="logo">
                                     </div>
 
-                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+                                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3">
                                         <img src="image/logo4.png" alt="logo">
                                     </div>
                                 </div>
