--- a/Homework 35/index.html
+++ b/Homework 35/index.html
@@ -5,27 +5,55 @@
     <title>Title</title>
 </head>
 <style>
+    body{
+        background: url("img/back.jpg");
+        background-size: cover;
+    }
+    h1{
+        text-align: center;
+        font-size: 90px;
+        font-weight: 700;
+        letter-spacing: 15px;
+        background: linear-gradient(45deg, royalblue, darkcyan 50%, royalblue);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
     img{
         max-width: 100%;
         width: auto;
         height: auto;
     }
     #imgContainer{
-        width: 90%;
-        margin: 13% auto;
+        margin: 0 auto;
         display: flex;
-        justify-content: space-around;
+        flex-wrap: wrap;
+        justify-content: center;
     }
     .image img{
         width: 150px;
         height: 100px;
+        border-radius: 10px;
     }
     .image{
         width: 150px;
         height: 100px;
-        text-align: center;
         font-size: 24px;
         position: relative;
+        margin: 10px;
+    }
+    .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        background-color: rgba(0, 0, 0, .5);
+        width: 100%;
+        height: 100%;
+        transition: .5s ease;
+        display: none;
+        color: #fff;
+        text-align: center;
+        border-radius: 10px;
     }
     .modal {
         display: none;
@@ -46,6 +74,8 @@
         display: block;
         width: 80%;
         max-width: 700px;
+        border: 10px solid #fff;
+        border-radius: 20px;
     }
     #close{
         color: red;
@@ -54,75 +84,67 @@
         font-weight: bold;
         cursor: pointer;
     }
-    .overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        background-color: rgba(0, 0, 0, .6);
-        overflow: hidden;
-        width: 100%;
-        height: 100%;
-        transition: .5s ease;
-        display: none;
+
+    #modal-label{
+        text-align: center;
+        width: 25%;
+        color: antiquewhite;
+        margin: 0 auto;
+        margin-top: 20px;
+        border: 2px solid #fff;
+        border-radius: 10px;
+        padding: 10px 0;
+        font-size: 24px;
     }
 </style>
 <body>
+<h1>Ретро Автомобили</h1>
 <div id="imgContainer">
     <div class="image"><img src="img/photo_1.jpg" alt="Buick Super" title="Buick Super">
         <div class="overlay">
-            <div class="text">Hello World</div>
         </div>
     </div>
     <div class="image"><img src="img/niva.jpg" alt="Niva" title="Нива ВАЗ-2121">
         <div class="overlay">
-            <div class="text"></div>
         </div>
     </div>
     <div class="image"><img src="img/mercury.jpg" alt="Mercury" title="Mercury">
         <div class="overlay">
-            <div class="text"></div>
         </div>
     </div>
     <div class="image"><img src="img/volga.jpg" alt="Volga" title="Волга ГАЗ-21">
         <div class="overlay">
-            <div class="text"></div>
         </div>
     </div>
-    <div class="image"><img src="img/limousene.jpg" alt="BMW" title="BMW Limousene">
+    <div class="image"><img src="img/vw-beatle.jpg" alt="VW Beatle" title="VW Beatle">
         <div class="overlay">
-            <div class="text"></div>
         </div>
     </div>
     <div class="image"><img src="img/morgan.jpg" alt="Morgan" title="Morgan">
         <div class="overlay">
-            <div class="text"></div>
         </div>
     </div>
     <div class="image"><img src="img/thunderbird.jpg" alt="Thunderbird" title="Thunderbird">
         <div class="overlay">
-            <div class="text"></div>
         </div>
     </div>
-    <div class="image"><img src="img/mersedes.jpg" alt="Mersedes" title="Mersedes-Benz">
+    <div class="image"><img src="img/rolls-royse.jpg" alt="Rolls Royce" title="Rolls Royce">
         <div class="overlay">
-            <div class="text"></div>
         </div>
     </div>
     <div class="image"><img src="img/zhiguli.jpg" alt="Zhiguli" title="Жигули ВАЗ-21011">
         <div class="overlay">
-            <div class="text"></div>
         </div>
     </div>
     <div class="image"><img src="img/cadillac.jpg" alt="Cadillac" title="Cadillac">
         <div class="overlay">
-            <div class="text"></div>
         </div>
     </div>
 </div>
 <div id="myModal" class="modal">
     <span id="close">&times;</span>
     <img class="modal-content" id="modalImg">
+    <div id="modal-label"></div>
 </div>
 
 <script>
@@ -130,6 +152,8 @@
     let modal = document.getElementById('myModal');
     let span = document.getElementById('close');
     let modalImg = document.getElementById('modalImg');
+    let overlay = document.querySelectorAll('.overlay');
+    let label = document.getElementById('modal-label');
 
     imgContainer.addEventListener('mouseover', showTitle);
     imgContainer.addEventListener('click', showModal);
@@ -138,19 +162,26 @@
     function showTitle(event) {
         let target = event.target;
         if (target.tagName == 'IMG'){
-            console.log(target.parentElement.children[1]);
             target.parentElement.children[1].style.display = 'block';
+            target.parentElement.children[1].innerHTML = target.title;
         }
     }
     function showModal(event) {
         let target = event.target;
-        if (target.tagName == 'IMG'){
+        if (target.className == 'overlay'){
             modal.style.display = 'block';
-            modalImg.src = target.src;
+            modalImg.src = target.parentElement.firstChild.src;
+            label.innerHTML = target.parentElement.firstChild.title;
         }
     }
     span.onclick = function () {
         modal.style.display = 'none';
+    }
+
+    for (let i = 0; i < overlay.length; i++){
+        overlay[i].onmouseout = function () {
+            overlay[i].style.display = 'none';
+        }
     }
 
 
