--- a/Homework 31/Project/index.html
+++ b/Homework 31/Project/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <title>NeutronMail</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-grid.min.css" rel="stylesheet">
     <link href="fontawesome/css/all.min.css" type="text/css" rel="stylesheet">
@@ -188,16 +188,30 @@
                 <div class="container">
                     <div class="notebook-first-block">
                         <div class="first-block-dots">
-                            <a href="#"><div class="dot dot-active"></div></a>
-                            <a href="#"><div class="dot"></div></a>
-                            <a href="#"><div class="dot"></div></a>
+                            <div class="dot"></div>
+                            <div class="dot"></div>
+                            <div class="dot"></div>
                         </div>
                         <div class="first-block-text">
-                            A new email service being developed by a group from</br>
-                            MIT and CERN promises to bring secure,</br>
-                            encrypted email to the masses and keep sensitive in-</br>
-                            formation away from prying eyes.</br>
+                            A new email service being developed by a group from<br/>
+                            MIT and CERN promises to bring secure,<br/>
+                            encrypted email to the masses and keep sensitive in-<br/>
+                            formation away from prying eyes.<br/>
                             <span class="small-text">— Boston Herald</span>
+                        </div>
+                        <div class="first-block-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>
+                            Accusantium aliquid architecto autem, cum cumque enim eum <br>
+                            fugit in iusto magnam maxime minima mollitia natus omnis, <br>
+                            perferendis quam soluta velit voluptatibus? <br>
+                            <span class="small-text">— Lorem Ipsum</span>
+                        </div>
+                        <div class="first-block-text">
+                            Accusantium aliquid architecto autem, cum cumque enim eum <br>
+                            fugit in iusto magnam maxime minima mollitia natus omnis, <br>
+                            perferendis quam soluta velit voluptatibus? <br>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>
+                            <span class="small-text">— Lorem Ipsum</span>
                         </div>
                     </div>
                 </div>
@@ -241,9 +255,76 @@
                     <div class="footer-img-text">Those, who help us secure your privacy</div>
                     <img src="img/who_help.png">
                 </div>
+
+                <div class="footer-text">
+                    <div class="footer-email">
+                        <div class="email">
+                            <p>General: <a href=""> contact@neutronmail.ch</a></p>
+                            <p>Media: <a href=""> media@neutronmail.ch</a></p>
+                            <p>Security: <a href=""> security@neutronmail.ch</a></p>
+                        </div>
+
+                        <div class="site-link">
+                            For support inquiries, please visit
+                            <p><a href="">neutronmail.com/support</a></p>
+                        </div>
+                    </div>
+
+                    <div class="footer-lists">
+                        <div class="footer-list text-right">
+                            <h4>Company</h4>
+                            <ul>
+                                <li>Blog</li>
+                                <li>Team</li>
+                                <li>Careers</li>
+                                <li>Support</li>
+                                <li>Donate</li>
+                            </ul>
+                        </div>
+                        <div class="footer-list text-right">
+                            <h4>Legal</h4>
+                            <ul>
+                                <li>Imprint</li>
+                                <li>Privacy Policy</li>
+                                <li>Terms & Conditions</li>
+                                <li>Transparency Report</li>
+                                <li>Report Abuse</li>
+                            </ul>
+                        </div>
+                        <div class="footer-list text-right">
+                            <h4>NeutronMail</h4>
+                            <ul>
+                                <li>Pricing</li>
+                                <li>Security</li>
+                                <li>Shop</li>
+                                <li>Press/Media Kit</li>
+                                <li>Onion Site</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="footer-line"></div>
+                </div>
+            </div>
+
+            <div class="wrap-container">
+                <div class="footer-social">
+                    <ul class="social">
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Google+</a></li>
+                        <li><a href="#">Feedback Forum</a></li>
+                        <li><a href="#">Reddit</a></li>
+                    </ul>
+                </div>
+                <div class="footer-copyright">
+                    © 2017 Neutron Technologies AG. All Rights Reserved.
+                </div>
             </div>
         </footer>
     </div>
 </main>
+
+<script src="js/script.js"></script>
 </body>
 </html>
